--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -163,6 +163,15 @@ code {
 } */
 
 
+/* typo */
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #ffffff;
+  color: #333333;
+  margin: 0;
+  padding: 0;
+}
+
 /* css for header */
 .header {
   display: flex;
@@ -268,7 +277,7 @@ code {
 .modal-content button {
   margin-top: 20px;
   padding: 8px 12px;
-  background-color: #e74c3c;
+  background-color: #333333;
   color: white;
   border: none;
   border-radius: 4px;
@@ -276,6 +285,166 @@ code {
 }
 
 .modal-content button:hover {
-  background-color: #c0392b;
+  background-color: #9A48D0;
 }
 
+
+/* fragment css */
+
+.fragments-container {
+  padding: 2rem;
+}
+
+.fragments-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.fragment-card {
+  background-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  padding: 1rem;
+  width: 250px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.fragment-card h3 {
+  margin-top: 0;
+}
+
+.fragment-card button {
+  background-color: #7BC950;
+  border: none;
+  padding: 0.5rem;
+  margin-top: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 500px;
+}
+ /* fragment form css */
+
+ .form-container {
+  padding: 2rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 500px;
+}
+
+input, textarea {
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+}
+
+textarea {
+  min-height: 100px;
+}
+
+button[type="submit"] {
+  background-color: #7BC950;
+  border: none;
+  padding: 0.5rem 1rem;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* tags css */
+.tags-container {
+  padding: 2rem;
+}
+
+.tags-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+.tag-chip {
+  background-color: #9A48D0;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.tag-chip button {
+  background: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.new-tag-button {
+  background-color: #7BC950;
+  padding: 0.5rem 1rem;
+  border: none;
+  color: white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background: #FFFFFF;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 300px;
+}
+
+.modal-actions {
+  display: flex;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+.modal-actions button {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.delete-button {
+  background-color: #D03A3A;
+  color: white;
+}
