--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -404,7 +404,7 @@ body.dark {
   position: absolute;
   cursor: pointer;
   top: 0; left: 0; right: 0; bottom: 0;
-  background-color: #ccc;
+  background-color: #FFFFFF;
   transition: 0.4s;
   border-radius: 24px;
 }
@@ -416,7 +416,7 @@ body.dark {
   width: 18px;
   left: 3px;
   bottom: 3px;
-  background-color: white;
+  background-color: #FFFFFF;
   transition: 0.4s;
   border-radius: 50%;
 }
